--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Yang Liu</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@2.1.0/build/pure-min.css" integrity="sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@2.1.0/build/pure-min.css"
+    integrity="sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH" crossorigin="anonymous">
 </head>
+
 <body>
   <div style="padding: 2rem; max-width: 800px;">
-    <h1>Hey, I'm Yang.</h1>
-    <p>I'm a Developer at <a href="https://github.com/plctlab">PLCT Lab</a>.</p>
-    <p>You can see most of my internet traces on my <a href="https://github.com/ksco">GitHub page</a>.</p>
-    <p>I don't have any public social network accounts, sorry.</p>
-    <p>If you need to contact me, feel free to email numbksco@gmail.com.</p>
+    <h1>Hey, I'm Yang Liu.</h1>
+    <p>I'm a Developer at <a href="https://github.com/plctlab">PLCT Lab</a>. Interested in RISC-V, JIT,
+      emulation, and low level stuff like that. </p>
+    <p>Currently working on <a href="https://github.com/ptitSeb/box64">box64</a> and
+      <a href="https://github.com/DynamoRIO/dynamorio">DynamoRIO</a>.
+    </p>
+
+    <p>Feel free to get in touch (Chinese, English). For complete strangers, prefer email first.</p>
+    <pre>
+ * Email:    numbksco@gmail.com
+ * Telegram: aintnobodyhave
+ * Github:   ksco
+</pre>
   </div>
 </body>
+
 </html>
